@@ -5,6 +5,7 @@
 #
 # Updates:
 #  06-Oct-2019 jdw add GO as part of abbreviated mappings
+#  19-Sep-2023 dwp RO-4033: When using SIFTS alignment data, don't mix and match segments from different chains of the same entity
 ##
 """
 Utilities to manage access to SIFTS summary mapping data.
@@ -21,7 +22,7 @@ import sys
 
 from rcsb.utils.io.MarshalUtil import MarshalUtil
 from rcsb.utils.io.StashableBase import StashableBase
-from rcsb.utils.seq.SeqAlign import SeqAlign, splitSeqAlignObjList
+from rcsb.utils.seq.SeqAlign import SeqAlign
 
 logger = logging.getLogger(__name__)
 
@@ -114,21 +115,23 @@ class SiftsSummaryProvider(StashableBase):
         """
         retD = {}
         seqAlignObjL = []
+        asymMaxAlignLengthD = {}
         for authAsymId in authAsymIdL:
-            seqAlignObjL.extend([SeqAlign("SIFTS", **sa) for sa in self.getIdentifiers(entryId, authAsymId, idType="UNPAL")])
+            #
+            asymMaxAlignLength = asymMaxAlignLengthD.get(entryId, 0)
+            asymSeqAlignObjL = self.getSeqAlignObjList(entryId, authAsymId)
+            asaoLength = sum([seqAlignObj.getEntityAlignLength() for seqAlignObj in asymSeqAlignObjL])
+            logger.debug("asaoLength %r for list: %r", asaoLength, asymSeqAlignObjL)
+            #
+            # accumulate only the longest sifts alignments by entity.
+            # Only keep the chain with the longest alignment
+            if asaoLength > asymMaxAlignLength:
+                seqAlignObjL = [sa for sa in asymSeqAlignObjL]
+                logger.debug("siftsAlignD: %r", seqAlignObjL)
+                asymMaxAlignLengthD[entryId] = asaoLength
         #
-        alRefD = {}
         for seqAlignObj in seqAlignObjL:
-            alRefD.setdefault((seqAlignObj.getDbName(), seqAlignObj.getDbAccession()), []).append(seqAlignObj)
-        #
-        # Get the longest overlapping entity region of each ref alignment -
-        for (dbName, dbAcc), aL in alRefD.items():
-            alGrpD = splitSeqAlignObjList(aL)
-            logger.debug("SIFTS -> entryId %s dbName %r dbAcc %r alGrpD %r", entryId, dbName, dbAcc, alGrpD)
-            for _, grpAlignL in alGrpD.items():
-                lenL = [seqAlignObj.getEntityAlignLength() for seqAlignObj in grpAlignL]
-                idxMax = lenL.index(max(lenL))
-                retD.setdefault((dbName, dbAcc), []).append(grpAlignL[idxMax])
+            retD.setdefault((seqAlignObj.getDbName(), seqAlignObj.getDbAccession()), []).append(seqAlignObj)        
         return retD
 
     def getIdentifiers(self, entryId, authAsymId, idType=None):
